--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="sample text">
     <title>Web Page</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
+
+
     
+    <script src="./assets/js/app.js"></script>
 </body>
 </html>
