--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>Web Page</title>
     <link rel="stylesheet" href="./assets/css/sanitize.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 
-
+こんにちわ
 
     <script src="./assets/js/app.js"></script>
 </body>
