--- a/index.html
+++ b/index.html
@@ -13,7 +13,23 @@
 </head>
 <body>
 
-こんにちわ
+    <section class="section">
+        <h1 class="section-headline">About</h1>
+        <figure class="about">
+            <img class="about-image" src="https://dummyimage.com/600x400/000/fff" alt="about image">
+            <figcaption class="about-caption">
+                <h2 class="about-headline">What can we do?</h2>
+                <p class="about-description">
+                    Text text text text text text text text text text text text text text text text text text text text text text text text text text text text text
+                    text text text text text text text text text text text text text text text text text text text text text text text text text text text text
+                    <br>
+                    text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text
+                    text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text
+                    text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text
+                </p>
+            </figcaption>
+        </figure>
+    </section>
 
     <script src="./assets/js/app.js"></script>
 </body>
